--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <script src="js/sweetalert.js"></script>
-<title>God Is One</title>
+<title>Happy Diwali</title>
 
 <style>
     .bd-placeholder-img {
